--- a/src/pages/login/LoginInput.css
+++ b/src/pages/login/LoginInput.css
@@ -15,6 +15,7 @@
 }
 
 .input-container input::placeholder {
+  pointer-events: none;
   opacity: 50%;
 }
 
@@ -26,7 +27,7 @@
   pointer-events: none;
   font-size: 0.7em;
   transition: 0.4s cubic-bezier(0.05, 0.81, 0, 0.93);
-  transform: translateX(14px) translateY(-8px);
+  transform: translateX(20%) translateY(-50%);
   color: #012d6b;
   opacity: 100%;
   letter-spacing: 0.05em;
