--- a/src/pages/login/Signup.css
+++ b/src/pages/login/Signup.css
@@ -1,6 +1,7 @@
 .signup-container {
   height: 100%;
   width: 25vw;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
